# Floatchat2

./: .gitignore
floatchat/: ARCHITECTURE.md  README.md  package.py  pyproject.toml
floatchat/docs/architecture/: argo_data_model.md
floatchat/docs/investigations/: temp_query_root_cause.md
floatchat/docs/scientific/: argo_scientific_audit.md
floatchat/frontend/: package-lock.json
floatchat/frontend/app/: layout.tsx  page.tsx
floatchat/frontend/components/Chat/: ChatHistory.tsx  ChatPanel.tsx
floatchat/frontend/components/Input/: PromptInput.tsx
floatchat/frontend/components/Map/: MapPanel.tsx
floatchat/frontend/components/Results/: FloatDetailCard.tsx  PlotlyChart.tsx
floatchat/frontend/hooks/: useChat.ts
floatchat/src/floatchat/: __init__.py  config.py  exceptions.py  logging_config.py
floatchat/src/floatchat/api/: dependencies.py  main.py  (+1 more)
floatchat/tests/: conftest.py  test_deployment_mode.py
floatchat/tests/test_api/: test_routes.py
floatchat/tests/test_conversation/: test_context_preservation.py  test_memory.py  test_stale_context_regression.py
floatchat/tests/test_intent_parser/: test_mock.py  test_regex.py
floatchat/tests/test_llm_service/: test_classifier.py  test_ollama.py
floatchat/tests/test_metadata_service/: test_gdac.py  test_phase21_routing.py  test_polygons.py
floatchat/tests/test_netcdf_reader/: test_bgc_reader.py  test_variable_aliases.py
floatchat/tests/test_query_engine/: test_engine.py
floatchat/tests/test_repository_service/: test_gdac_http.py
floatchat/tests/test_visualization_engine/: test_profile.py
(+64 files in other folders)
